--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="20" />
+        android:minSdkVersion="9"
+        android:targetSdkVersion="24" />
     
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -14,9 +14,11 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
     <application
+		android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -29,7 +31,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".connectivity.NetworkMgrService" android:enabled="true"></service>
+        <service android:name=".connectivity.ConnectivityService" android:enabled="true"></service>
+        <activity
+            android:name=".video.VideoListActivity"
+            android:label="@string/title_activity_video_list"
+            android:theme="@android:style/Theme.Light" />
+        <activity
+            android:name=".video.VideoPlayer"
+            android:label="@string/title_activity_video_player"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" />
     </application>
 
 </manifest>
